k8s/flashsend-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flashsend-server
  namespace: flashsend-prod
spec:
  type: ClusterIP
  selector:
    app: flashsend-server
  ports:
    - port: 8080
      targetPort: 8080
      name: http
